2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* configure.ac: Bumped the package version to 20050820 which will be
	a real snapshot.

	* fileformats/fileformats.tex: Added 20050820 as a real release version
	number.

2005-08-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Updated package version to 20050814.  This is a 
	temporary version and not a real release number.

	* fileformats/fileformats.tex: Added 20050814 as a test version
	which should not be used.

2005-03-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: The changes to configure.ac added on 3/12/05 have
	been removed.  In the distributed tarballs, it is okay to not have
	latex installed since the docs are pre-generated.

2005-03-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* gschem/gschem.tex: Removed obsolete install tests

2005-03-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Changed script so that configure stops when one
	of require programs is not found.

2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Bumped version to 20050313

	* gsch2pcb_tutorial/*: Updated tutorial to Bill Wilson's latest 
	version.

	* fileformats/fileformats.tex: Added 20050313 as a valid version
	number

	* gsch2pcb_tutorial/tutorial.html: Oops forgot a minor update to
	get background image right.

2005-02-19 Carlos Nieves Onega <cnieves@iespana.es>

	* fileformats/fileformats.tex: Added picture field description.

2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* toplevel/gedadocs.html.in: Added README.sysc to html manual page

	* toplevel/gedadocs.html.in: Added README.eagle to html manual page

	* fileformats/fileformats.tex: Added new valid version string

	* toplevel/toplevel.html.in: Background color tweak

2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* configure.ac: Updated version to 20041228

2004-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* attributes/attributes.tex: Added details on the symversion= 
	attribute
