@@ -1,3 +1,7 @@
+2005-08-20 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* gsch2pcb_tutorial/*: Updated to Bill Wilson's latest version.
+
 2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>
 	
 	* configure.ac: Bumped the package version to 20050820 which will be
